documentation mise en place Patient, ajout methode(s) possible
